added images to the projects

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/BarkrSnapShot.png" alt="" /></a>
 						<h3><a href="https://micahjank.github.io/barkr/" target="_blank">Barkr App Landing Page</a></h3>
 						<p>Landing page for a fake app called Barkr, it was made using HTML, CSS and Bootstrap.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="" class="image featured"><img src="images/Log In Portal.png" alt="" /></a>
 						<h3><a href="https://micahjank.github.io/login-portal/" target="_blank">Log-in Portal Page</a>
 						</h3>
 						<p>This is a log-in portal made using Bootstrap. No functionality yet. Purely cosmetic.</p>
@@ -108,14 +108,14 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/Vitrual-Drum-Kit.png" alt="" /></a>
 						<h3><a href="https://micahjank.github.io/drum-kit/" target="_blank">Virtual Drum Kit</a></h3>
 						<p>This is a virtual drum kit that uses HTML, CSS and Javascript to play sound when a button is pressed.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/Great-Idea-Website.png" alt="" /></a>
 						<h3><a href="https://github.com/MicahJank/responsive-web-design-I/tree/micah-jank"
 								target="_blank">Great Idea Website</a></h3>
 						<p>This is a website I made by following a design file, the goal was to learn responsiveness.
@@ -124,7 +124,7 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/Sprint-Challenge.png" alt="" /></a>
 						<h3><a href="https://github.com/MicahJank/Sprint-Challenge--User-Interface"
 								target="_blank">Sprint Challenge</a></h3>
 						<p>This is a project where I had to use the HTML and CSS skills i learned to make a website
@@ -133,7 +133,7 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/Dice-Game.png" alt="" /></a>
 						<h3><a href="https://micahjank.github.io/dice-game/" target="_blank">The Dice Game</a></h3>
 						<p>A simple dice game where to players can compete and see who has the higher number.</p>
 					</article>
