changed icons for the stuff i do section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<!-- FONT AWESOME -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+		integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body class="is-preload">
@@ -53,7 +56,7 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-comments-o"></span>
+						<i class="icon featured fab fa-html5"></i>
 						<h3>HTML</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
@@ -61,7 +64,7 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-camera-retro"></span>
+						<i class="icon featured fab fa-css3"></i>
 						<h3>CSS</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
@@ -69,7 +72,7 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-o-up"></span>
+							<i class="icon featured fab fa-js"></i>
 						<h3>Javascript</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
@@ -110,7 +113,8 @@
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/Vitrual-Drum-Kit.png" alt="" /></a>
 						<h3><a href="https://micahjank.github.io/drum-kit/" target="_blank">Virtual Drum Kit</a></h3>
-						<p>This is a virtual drum kit that uses HTML, CSS and Javascript to play sound when a button is pressed.</p>
+						<p>This is a virtual drum kit that uses HTML, CSS and Javascript to play sound when a button is
+							pressed.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
@@ -184,10 +188,7 @@
 					<ul class="social">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 						<!--
 								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
@@ -206,7 +207,7 @@
 			</div>
 			<footer>
 				<ul id="copyright">
-					<li>&copy; Untitled. All rights reserved.</li>
+					<li>&copy; Micah Jank. All rights reserved.</li>
 					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
