--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<article id="work" class="wrapper style2">
 		<div class="container">
 			<header>
-				<h2>Here's all the stuff I do.</h2>
+				<h2><strong>Here's all the stuff I do.</strong></h2>
 				<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 			</header>
 			<div class="row aln-center">
@@ -90,7 +90,7 @@
 	<article id="portfolio" class="wrapper style3">
 		<div class="container">
 			<header>
-				<h2>Here are some of my latest projects.</h2>
+				<h2><strong>Here are some of my latest projects.</strong></h2>
 				<p>Proin odio consequat sapien vestibulum consequat lorem dolore feugiat.</p>
 			</header>
 			<div class="row">
